# new-resume

./: Cargo.toml  apogee-coverletter.typ  content.yml  coverletter.typ  cv.typ  example.yml  main.typ
materials/: floem-animation.typ  leviathan.typ  work_samples.typ
src/: app_config.rs  cv.rs  main.rs  markdown.rs
